# docs/swagger.json
@@ -98,7 +98,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.CommonResponse-array_schema_ModelCache"
+                            "$ref": "#/definitions/entity.CommonResponse-array_entity_ConfigChatModel"
                         }
                     }
                 }
@@ -157,7 +157,7 @@
                     "200": {
                         "description": "返回数据",
                         "schema": {
-                            "$ref": "#/definitions/entity.CommonResponse-entity_PaginatedContinuationResponse-schema_Message"
+                            "$ref": "#/definitions/entity.CommonResponse-chat_ChatMessageListResponse"
                         }
                     }
                 }
@@ -3027,11 +3027,31 @@
         }
     },
     "definitions": {
+        "chat.ChatMessageListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.Message"
+                    }
+                },
+                "model_map": {
+                    "description": "模型 ID -\u003e 模型名称",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "next_page": {
+                    "type": "integer"
+                }
+            }
+        },
         "chat.CompletionStream.userInput": {
             "type": "object",
             "required": [
                 "model_name",
-                "provider_name",
                 "question"
             ],
             "properties": {
@@ -3042,11 +3062,7 @@
                     "type": "boolean"
                 },
                 "model_name": {
-                    "description": "Model.Name 准确的模型名称",
-                    "type": "string"
-                },
-                "provider_name": {
-                    "description": "Provider.Name 准确的供应商名称",
+                    "description": "模型集合名称",
                     "type": "string"
                 },
                 "question": {
@@ -3100,7 +3116,7 @@
                 }
             }
         },
-        "entity.CommonResponse-array_schema_ModelCache": {
+        "entity.CommonResponse-array_entity_ConfigChatModel": {
             "type": "object",
             "properties": {
                 "code": {
@@ -3111,7 +3127,7 @@
                     "description": "数据",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/schema.ModelCache"
+                        "$ref": "#/definitions/entity.ConfigChatModel"
                     }
                 },
                 "msg": {
@@ -3177,7 +3193,7 @@
                 }
             }
         },
-        "entity.CommonResponse-entity_PaginatedContinuationResponse-schema_Message": {
+        "entity.CommonResponse-chat_ChatMessageListResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -3188,7 +3204,7 @@
                     "description": "数据",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/entity.PaginatedContinuationResponse-schema_Message"
+                            "$ref": "#/definitions/chat.ChatMessageListResponse"
                         }
                     ]
                 },
@@ -3841,16 +3857,19 @@
                 }
             }
         },
-        "entity.PaginatedContinuationResponse-schema_Message": {
+        "entity.ConfigChatModel": {
             "type": "object",
             "properties": {
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schema.Message"
-                    }
+                "display_name": {
+                    "type": "string"
                 },
-                "next_page": {
+                "is_default": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "order": {
                     "type": "integer"
                 }
             }
@@ -4148,6 +4167,20 @@
                 },
                 "score": {
                     "type": "integer"
+                }
+            }
+        },
+        "manage.UpdateSystemConfigParams": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -4508,6 +4541,10 @@
         "schema.Model": {
             "type": "object",
             "properties": {
+                "active": {
+                    "description": "是否启用",
+                    "type": "boolean"
+                },
                 "config": {
                     "description": "使用 JSON 储存配置",
                     "allOf": [
@@ -4546,61 +4583,6 @@
                 "provider_id": {
                     "description": "关联的 Provider ID",
                     "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "schema.ModelCache": {
-            "type": "object",
-            "properties": {
-                "config": {
-                    "description": "使用 JSON 储存配置",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/schema.ModelConfig"
-                        }
-                    ]
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "description": "额外模型描述",
-                    "type": "string"
-                },
-                "display_name": {
-                    "description": "对外展示模型名称",
-                    "type": "string"
-                },
-                "id": {
-                    "description": "原始数据",
-                    "type": "integer"
-                },
-                "name": {
-                    "description": "模型名称",
-                    "type": "string"
-                },
-                "provider": {
-                    "description": "组装数据",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/schema.Provider"
-                        }
-                    ]
-                },
-                "provider_display_name": {
-                    "description": "关联的 Provider DisplayName",
-                    "type": "string"
-                },
-                "provider_id": {
-                    "description": "关联的 Provider ID",
-                    "type": "integer"
-                },
-                "provider_name": {
-                    "description": "关联的 Provider FileName",
-                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
